<resources>
    <string name="app_name">Lawyer\'s Diary</string>
<!--    <string name="app_id">ca-app-pub-5474497946967422~2393543405</string>-->
    <!--    Test Ad Unit-->
    <string name="banner_ad_unit">ca-app-pub-3940256099942544/6300978111</string>

    <string name="let_s_start_with_login">Welcome! \nLet\'s start with Login!</string>
    <string name="let_s_start_with_register">Welcome! \nLet\'s start with Register!</string>
    <string name="please_login_with_your_email_amp_password"><![CDATA[Please Login With Your Email & Password]]></string>
    <string name="please_signup_with_your_email_amp_password"><![CDATA[Please Signup With Your Email & Password]]></string>
    <string name="don_t_you_have_any_account">Don\'t you have any account?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="lawyer">Lawyer</string>
    <string name="client">Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">Schedule</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="chamber_address">Chamber Address</string>
    <string name="membership_no">Membership No.</string>
    <string name="bar_association_name">Bar Association Name</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="share_this_app">Share This App</string>
    <string name="check_for_update">Check For Update</string>
    <string name="help">Help</string>
    <string name="language">Language</string>
    <string name="company_information">Company Information</string>
    <string name="forbitbd_gmail_com">forbitbd@gmail.com</string>
    <string name="forbit_limited">Forbit Limited</string>
    <string name="sohel_ahmed2178_gmail_com">sohel.ahmed2178@gmail.com</string>
    <string name="developer_information">Developer Information</string>
    <string name="saimulhoque8214_gmail_com">saimulhoque8214@gmail.com</string>
    <string name="saimul_hoque">Saimul Hoque</string>
    <string name="abidasobhan19_gmail_com">abidasobhan19@gmail.com</string>
    <string name="abid_ahmed_sobhan">Abid Ahmed Sobhan</string>
    <string name="sohel_ahmed">Sohel Ahmed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="case_added">Case Added</string>
    <string name="schedule_today">Schedule Today</string>
    <string name="active_cases">Active Cases</string>
    <string name="add_client">Add Client</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="add_case_type">Add Case Type</string>
    <string name="case_type">Case Type</string>
    <string name="add_court">Add Court Name</string>
    <string name="add_case">Add Case</string>
    <string name="case_title">Case Title</string>
    <string name="case_number">Case Number</string>
    <string name="case_file_number">Case File Number</string>
    <string name="case_starting_date">Case Starting Date</string>
    <string name="court_name">Court Name</string>
    <string name="client_name">Client Name</string>
    <string name="complainant_defendant">Complainant/Defendant</string>
    <string name="opponent_advocate_name">Opponent Advocate Name</string>
    <string name="opponent_advocate_phone">Opponent Advocate Phone</string>
    <string name="evidence">Evidence</string>
    <string name="remarks">Remarks</string>
    <string name="all_cases">All Cases</string>
    <string name="phone_1">Phone 1</string>
    <string name="phone_2">Phone 2</string>
    <string name="birth_date">Birth Date</string>
    <string name="city">City</string>
    <string name="case_fees">Case Fees</string>
    <string name="opposition_party_name">Opposition Party Name</string>
    <string name="all_clients">All Clients</string>
    <string name="appointments">Appointments</string>
    <string name="calender">Calender</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="add_evidence">Add Evidence</string>
    <string name="case_types">Case Types</string>
    <string name="update">Update</string>
    <string name="ca_se">Case</string>
    <string name="next_date">Next Date</string>
    <string name="judge_name">Judge Name</string>
    <string name="documents_req">Documents Required</string>
    <string name="cases_type">Case Type:</string>
    <string name="courts_name">Court Name:</string>
    <string name="start_date">Starting Date:</string>
    <string name="clients">Client:</string>
    <string name="opp_party">Opp. Party:</string>
    <string name="opp_lawyer">Opp. Lawyer:</string>
    <string name="add_case_date">Add Case Date</string>
    <string name="add_case_fees">Add Case Fees</string>
    <string name="select_case">Select Case</string>
    <string name="payment_date">Payment Date</string>
    <string name="amount">Amount</string>
    <string name="payment_type">Payment Type</string>
    <string name="select_client">Select Client</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="purpose">Purpose</string>
    <string name="contact">Contact</string>
    <string name="in_overall_co_operation">In Overall Co-Operation</string>

    <string-array name="party">
        <item>Complainant</item>
        <item>Defendant</item>
    </string-array>

    <string-array name="payment_type">
        <item>Main</item>
        <item>Additional</item>
    </string-array>

    <string-array name="city_names">
        <item>Bagerhat</item>
        <item>Bandarban</item>
        <item>Barguna</item>
        <item>Barishal</item>
        <item>Bhola</item>
        <item>Bogura</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chapainawabganj</item>
        <item>Chattogram</item>
        <item>Chuadanga</item>
        <item>Cox’s Bazar</item>
        <item>Cumilla</item>
        <item>Dhaka</item>
        <item>Dinajpur</item>
        <item>Faridpur</item>
        <item>Feni</item>
        <item>Gaibandha</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Habiganj</item>
        <item>Jamalpur</item>
        <item>Jashore</item>
        <item>Jhalokati</item>
        <item>Jhenaidah</item>
        <item>Joypurhat</item>
        <item>Khagrachhari</item>
        <item>Khulna</item>
        <item>Kishoreganj</item>
        <item>Kurigram</item>
        <item>Kushtia</item>
        <item>Lakshmipur</item>
        <item>Lalmonirhat</item>
        <item>Madaripur</item>
        <item>Magura</item>
        <item>Manikganj</item>
        <item>Meherpur</item>
        <item>Moulvibazar</item>
        <item>Munshiganj</item>
        <item>Mymensingh</item>
        <item>Naogaon</item>
        <item>Narail</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Natore</item>
        <item>Netrokona</item>
        <item>Nilphamari</item>
        <item>Noakhali</item>
        <item>Pabna</item>
        <item>Panchagarh</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
        <item>Rajbari</item>
        <item>Rajshahi</item>
        <item>Rangamati</item>
        <item>Rangpur</item>
        <item>Satkhira</item>
        <item>Shariatpur</item>
        <item>Sherpur</item>
        <item>Sirajganj</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
        <item>Tangail</item>
        <item>Thakurgaon</item>

    </string-array>

</resources>
