<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_lite"
    tools:context=".ui.addcasefees.AddCaseFeesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_case_fees"
        android:background="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_case"
        style="@style/dropdown_textinput_layout_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/medium_padding"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <AutoCompleteTextView
            android:id="@+id/et_case"
            style="@style/autocomplete_textview_style"
            android:hint="@string/select_case" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_payment_date"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@id/ti_case"
        app:layout_constraintStart_toStartOf="@id/ti_case"
        app:layout_constraintTop_toBottomOf="@id/ti_case">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_payment_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
            android:hint="@string/payment_date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_amount"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@+id/ti_case"
        app:layout_constraintStart_toStartOf="@+id/ti_case"
        app:layout_constraintTop_toBottomOf="@+id/ti_payment_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_payment_type"
        style="@style/dropdown_textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@+id/ti_amount"
        app:layout_constraintStart_toStartOf="@+id/ti_amount"
        app:layout_constraintTop_toBottomOf="@+id/ti_amount">

        <AutoCompleteTextView
            android:id="@+id/et_payment_type"
            style="@style/autocomplete_textview_style"
            android:hint="@string/payment_type" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_remarks"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@+id/ti_payment_type"
        app:layout_constraintStart_toStartOf="@+id/ti_payment_type"
        app:layout_constraintTop_toBottomOf="@+id/ti_payment_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/remarks" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="@dimen/xlarge_padding"
        app:layout_constraintStart_toStartOf="@id/ti_remarks"
        app:layout_constraintEnd_toEndOf="@id/ti_remarks"
        app:layout_constraintTop_toBottomOf="@id/ti_remarks"/>

</androidx.constraintlayout.widget.ConstraintLayout>