<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_lite"
    tools:context=".ui.add_case_date.AddCaseDateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_case_date"
        android:background="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_case"
        style="@style/dropdown_textinput_layout_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/medium_padding"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <AutoCompleteTextView
            android:id="@+id/et_case"
            style="@style/autocomplete_textview_style"
            android:hint="@string/ca_se" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_next_date"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@id/ti_case"
        app:layout_constraintStart_toStartOf="@id/ti_case"
        app:layout_constraintTop_toBottomOf="@id/ti_case">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_next_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
            android:hint="@string/next_date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_judge_name"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@+id/ti_case"
        app:layout_constraintStart_toStartOf="@+id/ti_case"
        app:layout_constraintTop_toBottomOf="@+id/ti_next_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_judge_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/judge_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_court"
        style="@style/dropdown_textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@+id/ti_judge_name"
        app:layout_constraintStart_toStartOf="@+id/ti_judge_name"
        app:layout_constraintTop_toBottomOf="@+id/ti_judge_name">

        <AutoCompleteTextView
            android:id="@+id/et_court"
            style="@style/autocomplete_textview_style"
            android:hint="@string/court_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_document_requires"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@+id/ti_court"
        app:layout_constraintStart_toStartOf="@+id/ti_court"
        app:layout_constraintTop_toBottomOf="@+id/ti_court">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_document_requires"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/documents_req" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="@dimen/xlarge_padding"
        app:layout_constraintStart_toStartOf="@id/ti_document_requires"
        app:layout_constraintEnd_toEndOf="@id/ti_document_requires"
        app:layout_constraintTop_toBottomOf="@id/ti_document_requires"/>

</androidx.constraintlayout.widget.ConstraintLayout>