<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_lite"
    tools:context=".ui.clients.ClientDialogFragment">

    <View
        android:id="@+id/top_view"
        style="@style/dialog_top_view_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title_view"
        style="@style/dialog_title_style"
        app:layout_constraintStart_toStartOf="@id/top_view"
        app:layout_constraintTop_toTopOf="@id/top_view"
        app:layout_constraintBottom_toBottomOf="@id/top_view"
        android:text="@string/client" />

    <ImageView
        android:id="@+id/ic_close"
        style="@style/close_icon_style"
        app:layout_constraintTop_toTopOf="@id/top_view"
        app:layout_constraintBottom_toBottomOf="@id/top_view"
        app:layout_constraintEnd_toEndOf="@id/top_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_clientname"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@id/ic_close"
        app:layout_constraintStart_toStartOf="@id/title_view"
        app:layout_constraintTop_toBottomOf="@id/top_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_clientphone1"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@id/ti_clientname"
        app:layout_constraintStart_toStartOf="@id/ti_clientname"
        app:layout_constraintTop_toBottomOf="@id/ti_clientname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_phone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_clientphone2"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@id/ti_clientphone1"
        app:layout_constraintStart_toStartOf="@id/ti_clientphone1"
        app:layout_constraintTop_toBottomOf="@id/ti_clientphone1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_phone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_clientaddress"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@id/ti_clientphone2"
        app:layout_constraintStart_toStartOf="@id/ti_clientphone2"
        app:layout_constraintTop_toBottomOf="@id/ti_clientphone2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_clientemail"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@id/ti_clientaddress"
        app:layout_constraintStart_toStartOf="@id/ti_clientaddress"
        app:layout_constraintTop_toBottomOf="@id/ti_clientaddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_clientbd"
        style="@style/textinput_layout_style"
        app:layout_constraintEnd_toEndOf="@id/ti_clientemail"
        app:layout_constraintStart_toStartOf="@id/ti_clientemail"
        app:layout_constraintTop_toBottomOf="@id/ti_clientemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_update"
        style="@style/button_style"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="@id/ti_clientbd"
        app:layout_constraintStart_toStartOf="@id/ti_clientbd"
        app:layout_constraintTop_toBottomOf="@id/ti_clientbd" />

    <Space
        style="@style/space_style"
        app:layout_constraintStart_toStartOf="@id/btn_update"
        app:layout_constraintEnd_toEndOf="@id/btn_update"
        app:layout_constraintTop_toBottomOf="@id/btn_update" />

</androidx.constraintlayout.widget.ConstraintLayout>