<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addappointment.AddAppointmentFragment">

    <View
        android:id="@+id/top_view"
        style="@style/dialog_top_view_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_view"
        style="@style/dialog_title_style"
        android:text="@string/add_appointment"
        app:layout_constraintBottom_toBottomOf="@id/top_view"
        app:layout_constraintStart_toStartOf="@id/top_view"
        app:layout_constraintTop_toTopOf="@id/top_view" />

    <ImageView
        android:id="@+id/ic_close"
        style="@style/close_icon_style"
        app:layout_constraintBottom_toBottomOf="@id/top_view"
        app:layout_constraintEnd_toEndOf="@id/top_view"
        app:layout_constraintTop_toTopOf="@id/top_view" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_view">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_client"
            style="@style/dropdown_textinput_layout_style"
            android:layout_width="match_parent">

            <AutoCompleteTextView
                android:id="@+id/et_client"
                style="@style/autocomplete_textview_style"
                android:hint="@string/select_client" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_name"
                style="@style/textinput_layout_style"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_contact"
                style="@style/textinput_layout_style"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/contact" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_appointment_date"
            style="@style/textinput_layout_style"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_appointment_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                android:focusableInTouchMode="false"
                android:hint="@string/appointment_date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_appointment_purpose"
            style="@style/textinput_layout_style"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_appointment_purpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/purpose" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_remarks"
            style="@style/textinput_layout_style"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remarks" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_save"
        style="@style/button_style"
        android:layout_margin="@dimen/medium_padding"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <Space
        style="@style/space_style"
        app:layout_constraintEnd_toEndOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="@id/btn_save"
        app:layout_constraintTop_toBottomOf="@id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>